<resources>
    <string name="app_name">HungryOver</string>

    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_card">CardActivity</string>

    <!-- activity_login strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou Registre-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Esse e-mail é inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">A senha esta errada</string>
    <string name="error_field_required">Por favor, preencha esse campo</string>
    <string name="title_activity_menu">Bem-vindo(a)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="action_login">ENTRAR</string>
    <string name="account_no">Não tem uma conta? Crie já!</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="phone_number">Telefone</string>

    <!-- activity_signup strings -->
    <string name="name">Nome</string>
    <string name="register">REGISTRAR</string>
    <string name="password_confirm">Confirme a senha</string>
    <string name="account_yes">Já tem uma conta? Entre já</string>

    <!-- activity_code_read -->
    <string name="read">Escaneie o código da mesa ou, se preferir,</string>
    <string name="read_proceed">PROSSIGA</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="skip">Pular</string>

    <!-- permissions -->
    <string name="permission_camera_refused">A permissão da câmera é necessária para ler o código da mesa.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions.</string>

    <!-- navigation -->
    <string name="nav_title_personal_info">Dados Pessoais</string>
    <string name="title_activity_order">OrderActivity</string>

    <!-- Cart -->
    <string name="item_amount">"Informe a quantidade:"</string>

    <!-- URL -->
    <string name="url">http://52.90.180.18:8080</string>
</resources>